--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@ function createJetMesh() {
   });
 
   // -----------------------
-  // Helper: mirror without negative scale on mesh
+  // Helper: mirror without negative mesh scale
   // -----------------------
   function mirrorMeshX(mesh) {
     const m = mesh.clone();
@@ -1387,7 +1387,7 @@ function createJetMesh() {
   fuse.castShadow = true;
   root.add(fuse);
 
-  // Nose: ogive-ish (taper + cap)
+  // Nose: taper + cap
   const noseTaper = new THREE.Mesh(
     new THREE.CylinderGeometry(0.32, 0.82, 2.9, 28),
     matBody
@@ -1403,18 +1403,19 @@ function createJetMesh() {
   noseCap.castShadow = true;
   root.add(noseCap);
 
-  // Canopy (bubble)
+  // Canopy
   const canopy = new THREE.Mesh(new THREE.CapsuleGeometry(0.55, 1.65, 8, 18), matGlass);
   canopy.rotation.x = -Math.PI / 2;
   canopy.position.set(0, 0.88, -4.35);
-  canopy.castShadow = false; // looks better for glass
+  canopy.castShadow = false;
   root.add(canopy);
 
   // -----------------------
-  // Engine nacelles / shoulders (twin)
+  // Twin engine nacelles / shoulders
   // -----------------------
   const nacLen = 6.4;
   const nacGeo = new THREE.CylinderGeometry(0.55, 0.66, nacLen, 22);
+
   const nacL = new THREE.Mesh(nacGeo, matBody);
   nacL.rotation.x = -Math.PI / 2;
   nacL.position.set(0.78, -0.15, 2.0);
@@ -1425,21 +1426,20 @@ function createJetMesh() {
   nacR.position.x *= -1;
   root.add(nacR);
 
-  // Spine / deck between nacelles
+  // Deck between nacelles
   const deck = new THREE.Mesh(new THREE.BoxGeometry(1.15, 0.35, 4.8), matBody);
   deck.position.set(0, 0.25, 2.35);
   deck.castShadow = true;
   root.add(deck);
 
   // -----------------------
-  // Wings (trapezoid + slight dogtooth vibe)
+  // Wings (trapezoid / Hornet vibe)
   // -----------------------
   function makeHornetWingHalf() {
     const s = new THREE.Shape();
-    // x = outboard, y = chord (mapped to world Z after rotate)
     s.moveTo(0.0, -1.10);   // root leading
-    s.lineTo(1.25, -0.75);  // little LEX overlap / leading blend
-    s.lineTo(6.10,  1.05);  // tip leading (swept)
+    s.lineTo(1.25, -0.75);  // blend
+    s.lineTo(6.10,  1.05);  // tip leading
     s.lineTo(5.70,  4.55);  // tip trailing
     s.lineTo(1.10,  3.85);  // inboard trailing
     s.lineTo(0.0,   2.75);  // root trailing
@@ -1452,7 +1452,8 @@ function createJetMesh() {
       bevelSize: 0.06,
       bevelSegments: 4
     });
-    geo.rotateX(Math.PI / 2); // flatten (thickness becomes world Y-ish)
+
+    geo.rotateX(Math.PI / 2);
     const m = new THREE.Mesh(geo, matBody);
     m.castShadow = true;
     return m;
@@ -1467,7 +1468,7 @@ function createJetMesh() {
   root.add(wingR);
 
   // -----------------------
-  // LEX (leading edge extensions) – signature Hornet feature
+  // LEX (leading edge extensions)
   // -----------------------
   function makeLexHalf() {
     const s = new THREE.Shape();
@@ -1484,6 +1485,7 @@ function createJetMesh() {
       bevelSize: 0.05,
       bevelSegments: 3
     });
+
     geo.rotateX(Math.PI / 2);
     const m = new THREE.Mesh(geo, matBody);
     m.castShadow = true;
@@ -1499,7 +1501,7 @@ function createJetMesh() {
   root.add(lexR);
 
   // -----------------------
-  // Side intakes (boxy, Hornet-ish)
+  // Side intakes (boxy)
   // -----------------------
   const intakeOuterGeo = new THREE.BoxGeometry(0.95, 0.55, 1.85);
   const intakeInnerGeo = new THREE.BoxGeometry(0.72, 0.36, 1.45);
@@ -1526,7 +1528,7 @@ function createJetMesh() {
   root.add(intakeInnerR);
 
   // -----------------------
-  // Twin exhausts (F/A-18)
+  // Twin exhaust nozzles
   // -----------------------
   const nozzleGeo = new THREE.CylinderGeometry(0.62, 0.54, 1.05, 24);
   nozzleGeo.rotateX(Math.PI / 2);
@@ -1543,10 +1545,17 @@ function createJetMesh() {
   exR.position.x *= -1;
   root.add(exR);
 
-  // Afterburners: keep your sim hook as TWO objects, but each is a group with two flames
-  const outerGeo = new THREE.ConeGeometry(0.48, 3.8, 16, 1, true);
-  outerGeo.translate(0, 1.9, 0);
-  outerGeo.rotateX(Math.PI / 2);
+  // -----------------------
+  // Afterburners (ALIGNED: anchored to nozzle positions)
+  // Keep sim hook: two objects in userData.afterburners
+  // -----------------------
+  const outerFlameGeo = new THREE.ConeGeometry(0.48, 3.8, 16, 1, true);
+  outerFlameGeo.translate(0, 1.9, 0);
+  outerFlameGeo.rotateX(Math.PI / 2);
+
+  const innerFlameGeo = new THREE.ConeGeometry(0.29, 2.85, 16, 1, true);
+  innerFlameGeo.translate(0, 1.425, 0);
+  innerFlameGeo.rotateX(Math.PI / 2);
 
   const abOuterMat = new THREE.MeshBasicMaterial({
     color: 0xffaa33,
@@ -1556,10 +1565,6 @@ function createJetMesh() {
     depthWrite: false
   });
 
-  const innerGeo = new THREE.ConeGeometry(0.29, 2.85, 16, 1, true);
-  innerGeo.translate(0, 1.425, 0);
-  innerGeo.rotateX(Math.PI / 2);
-
   const abInnerMat = new THREE.MeshBasicMaterial({
     color: 0x66c9ff,
     transparent: true,
@@ -1568,34 +1573,44 @@ function createJetMesh() {
     depthWrite: false
   });
 
+  // These are the two objects your sim toggles
   const flameOuterGroup = new THREE.Group();
-  const flameOuterL = new THREE.Mesh(outerGeo, abOuterMat);
-  flameOuterL.position.set(nozzleOffsetX, -0.10, nozzleZ + 0.35);
-  flameOuterGroup.add(flameOuterL);
-
-  const flameOuterR = flameOuterL.clone();
-  flameOuterR.position.x *= -1;
-  flameOuterGroup.add(flameOuterR);
-
-  flameOuterGroup.visible = false;
-  root.add(flameOuterGroup);
-
   const flameInnerGroup = new THREE.Group();
-  const flameInnerL = new THREE.Mesh(innerGeo, abInnerMat);
-  flameInnerL.position.set(nozzleOffsetX, -0.10, nozzleZ + 0.45);
-  flameInnerGroup.add(flameInnerL);
-
-  const flameInnerR = flameInnerL.clone();
-  flameInnerR.position.x *= -1;
-  flameInnerGroup.add(flameInnerR);
-
+  flameOuterGroup.visible = false;
   flameInnerGroup.visible = false;
+  root.add(flameOuterGroup);
   root.add(flameInnerGroup);
+
+  function addFlamePair(parentGroup, geo, mat, offsetZ) {
+    // Left anchor
+    const aL = new THREE.Group();
+    aL.position.copy(exL.position);
+    aL.rotation.copy(exL.rotation);
+    parentGroup.add(aL);
+
+    const fL = new THREE.Mesh(geo, mat);
+    fL.position.set(0, 0, offsetZ);
+    aL.add(fL);
+
+    // Right anchor
+    const aR = new THREE.Group();
+    aR.position.copy(exR.position);
+    aR.rotation.copy(exR.rotation);
+    parentGroup.add(aR);
+
+    const fR = new THREE.Mesh(geo, mat);
+    fR.position.set(0, 0, offsetZ);
+    aR.add(fR);
+  }
+
+  // Tune these two if you want them closer/farther from nozzle exit
+  addFlamePair(flameOuterGroup, outerFlameGeo, abOuterMat, 0.55);
+  addFlamePair(flameInnerGroup, innerFlameGeo, abInnerMat, 0.65);
 
   root.userData.afterburners = [flameOuterGroup, flameInnerGroup];
 
   // -----------------------
-  // Horizontal tails (all-moving stabs)
+  // Horizontal tails (stabs)
   // -----------------------
   function makeTailHalf() {
     const s = new THREE.Shape();
@@ -1613,6 +1628,7 @@ function createJetMesh() {
       bevelSegments: 3
     });
     geo.rotateX(Math.PI / 2);
+
     const m = new THREE.Mesh(geo, matBody);
     m.castShadow = true;
     return m;
@@ -1627,7 +1643,7 @@ function createJetMesh() {
   root.add(stabR);
 
   // -----------------------
-  // Twin vertical stabilizers (canted outward)
+  // Twin vertical stabilizers (canted MORE)
   // -----------------------
   function makeFin() {
     const finShape = new THREE.Shape();
@@ -1645,7 +1661,7 @@ function createJetMesh() {
       bevelSegments: 2
     });
 
-    finGeo.rotateY(Math.PI / 2); // make it “thin” in Z
+    finGeo.rotateY(Math.PI / 2);
     const fin = new THREE.Mesh(finGeo, matBody);
     fin.castShadow = true;
     return fin;
@@ -1654,11 +1670,11 @@ function createJetMesh() {
   const finZ = 4.55;
   const finX = 0.72;
   const finY = 0.15;
-  const cant = 18 * Math.PI / 180;
+  const cant = 25 * Math.PI / 180; // <-- more angle than before
 
   const finL = makeFin();
   finL.position.set(finX, finY, finZ);
-  finL.rotation.z = -cant; // lean outward
+  finL.rotation.z = -cant;
   root.add(finL);
 
   const finR = makeFin();
@@ -1694,6 +1710,7 @@ function createJetMesh() {
 
   const tireGeo = new THREE.CylinderGeometry(0.35, 0.35, 0.25, 16);
   tireGeo.rotateZ(Math.PI / 2);
+
   const tireMat = new THREE.MeshStandardMaterial({
     color: VISUALS.colors.tire,
     roughness: 0.9,
@@ -1739,8 +1756,8 @@ function createJetMesh() {
     opacity: 0.0,
     depthWrite: false
   });
-  const vaporGeo = new THREE.PlaneGeometry(2.0, 0.4);
 
+  const vaporGeo = new THREE.PlaneGeometry(2.0, 0.4);
   const vaporTipX = 5.85;
   const vaporZ = 0.95;
 
